Refactor most of code to functions.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <button id="change-sign" class="digits">+/-</button>
         <button id="0" class="digits">0</button>
         <button id="comma" class="digits">.</button>
-        <button id="equals" class="equals">=</button>
+        <button id="equals" class="action">=</button>
       </div>
     </div>
   </div>
