Repair bugs and make small visual changes.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <div class="container">
     <div id="window">
       <div class="result">
-        <label id="equation"></label>
-        <label id="result"></label>
+        <label id="result">0</label>
       </div>
       <div class="buttons">
         <button id="percent" disabled>%</button>
@@ -47,7 +46,7 @@
         <button id="change-sign" class="digits">+/-</button>
         <button id="0" class="digits">0</button>
         <button id="comma" class="digits">.</button>
-        <button id="equals" class="action">=</button>
+        <button id="equals" class="equals">=</button>
       </div>
     </div>
   </div>
