--- a/index.html
+++ b/index.html
@@ -13,38 +13,38 @@
         <label id="result">0</label>
       </div>
       <div class="buttons">
-        <button id="percent" disabled>%</button>
-        <button id="CE" disabled>CE</button>
+        <button id="percent" class="instant-action">%</button>
+        <button id="CE">CE</button>
         <button id="C">C</button>
-        <button id="erase">⌫</button>
+        <button id="Backspace">⌫</button>
       </div>
       <div class="buttons">
-        <button id="fraction" disabled>1/x</button>
-        <button id="power" disabled>x²</button>
-        <button id="square-root" disabled>√x</button>
+        <button id="fraction" class="instant-action">1/x</button>
+        <button id="square" class="instant-action">x²</button>
+        <button id="square-root" class="instant-action">√x</button>
         <button id="divide" class="action">÷</button>
       </div>
       <div class="buttons">
-        <button id="7" class="digits" value="7">7</button>
-        <button id="8" class="digits">8</button>
-        <button id="9" class="digits">9</button>
+        <button id="seven" class="digits" value="7">7</button>
+        <button id="eight" class="digits">8</button>
+        <button id="nine" class="digits">9</button>
         <button id="multiply" class="action">x</button>
       </div>
       <div class="buttons">
-        <button id="4" class="digits">4</button>
-        <button id="5" class="digits">5</button>
-        <button id="6" class="digits">6</button>
+        <button id="four" class="digits">4</button>
+        <button id="five" class="digits">5</button>
+        <button id="six" class="digits">6</button>
         <button id="minus" class="action">-</button>
       </div>
       <div class="buttons">
-        <button id="1" class="digits">1</button>
-        <button id="2" class="digits">2</button>
-        <button id="3" class="digits">3</button>
+        <button id="one" class="digits">1</button>
+        <button id="two" class="digits">2</button>
+        <button id="three" class="digits">3</button>
         <button id="plus" class="action">+</button>
       </div>
       <div class="buttons">
         <button id="change-sign" class="digits">+/-</button>
-        <button id="0" class="digits">0</button>
+        <button id="zero" class="digits">0</button>
         <button id="comma" class="digits">.</button>
         <button id="equals" class="equals">=</button>
       </div>
