Fix bug with picking one operator after another.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <button id="plus" class="action">+</button>
       </div>
       <div class="buttons">
-        <button id="change-sign" class="digits">+/-</button>
+        <button id="change-sign" class="instant-action">+/-</button>
         <button id="zero" class="digits">0</button>
         <button id="comma" class="digits">.</button>
         <button id="equals" class="equals">=</button>
